Update priority description

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <label for="priority-urgent" class="priority-option urgent">
                         <span class="priority-emoji">🚨</span>
                         <span class="priority-name">Срочно</span>
-                        <span class="priority-desc">Делаем прямо сейчас</span>
+                        <span class="priority-desc">Делаем прямо сейчас - бросаем всё</span>
                     </label>
 
                     <input type="radio" id="priority-normal" name="priority" value="normal" checked>
